# flocking-in-rust

./: .gitignore  Cargo.toml  README.md
client/: client.js  index.html
server/: Cargo.toml
server/src/: arrow.rs  game.rs  main.rs
shared/: Cargo.toml
shared/src/: messages.rs
src/: arrow.rs  main.rs
